--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-flask
-flask-cors
-pandas
-numpy
-yfinance
-statsmodels
-ta
+Flask==3.1.0
+flask_cors==5.0.1
+numpy==2.2.4
+pandas==2.2.3
+scikit_learn==1.6.1
+statsmodels==0.14.4
+yfinance==0.2.55
